namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system01
  labels:
    app: metallb
