dakshesh-apache2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dakshesh-apache2-service
  namespace: dakshesh
spec:
  type: LoadBalancer
  ports:
    - port: 90
      targetPort: 81
  selector:
    file: apache2
