dakshesh-fibonacci-service.yml
apiVersion: v1
kind: Service
metadata:
 name: dakshesh-fibonacci-service
 namespace: dakshesh
spec:
 type: NodePort
 ports:
   - port: 81
     targetPort: 81
     nodePort: 30014
 selector:
   file: fibonacci
