dakshesh-httpd-service.yml
apiVersion: v1
kind: Service
metadata:
 name: dakshesh-httpd-service
 namespace: dakshesh
spec:
 type: NodePort
 ports:
   - port: 81
     targetPort: 81
     nodePort: 30013
 selector:
   file: httpd
